# ros-ydlidar-x2-motor-control

./: README.md  encoder_test.ino
my_robot/: CMakeLists.txt  package.xml  readme1.md  readmeRL.md
my_robot/arduino/robot_pid_odom/: robot_pid_odom.ino
my_robot/config/: amcl.yaml  costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml  teb_params.yaml  twist_mux.yaml
my_robot/launch/: joystick_teleop_advanced.launch  navigation.launch  slam.launch  slam_rviz.launch  view_slam.launch  waypoints.launch  ydlidar_x2.launch
my_robot/maps/: my_map.pgm  my_map.yaml
my_robot/rviz/: my_slam_view.rviz
my_robot/scripts/: joy_sim.py  joy_to_cmdvel_advanced.py  move_base_sequence.py  odom_to_tf.py
tur/: gp650_params.yaml  package.xml  readme  setup.py  teleop.launch.py  teleop_node.py
