<?xml version="1.0"?>
<package format="3">
  <name>gp650_turtlesim_teleop</name>
  <version>0.0.1</version>
  <description>Teleop turtlesim with GP-650 gamepad</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>joy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

